# Fastest-FastAPI

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  dev-requirements.txt  docker-compose.yaml  docker-entrypoint.sh  gunicorn_conf.py  main.py  make-env-example.sh  mypy.ini  pyproject.toml  requirements.txt  shell.py
.github/workflows/: main.yaml
app/api/: middleware.py  router.py
app/api/endpoints/: auth.py  collection.py  discord_auth.py
app/auth/: jwt.py  key.py
app/cache/: redis.py  time_cache.py
app/core/: config.py
app/db/: connection.py  dep.py  util.py
app/discord/: client.py  config.py  exceptions.py
app/discord/models/: guild.py  user.py
app/lmbd/: invoke.py
app/lmbd/sample_data/: snsCloudWatchEvent.json
app/lmbd/sample_lambda/: main.py
app/log/: setup.py
app/migrations/: env.py
app/models/: mysql.py  mysql_no_fk.py
app/types/: cache.py  jwt.py  lmbd.py  server.py  time.py
app/util/: common.py  json.py  time.py
loguru/: __init__.pyi  _asyncio_loop.py  _better_exceptions.py  _contextvars.py  _defaults.py  _locks_machinery.py  _logger.py  _simple_sinks.py
