[tool.poetry]
name = "fastapi-base"
version = "0.1.0"
description = ""
authors = ["Abe M <abe.malla8@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
redis = "^5.0.1"
boto3 = "^1.28.77"
uvicorn = "^0.23.2"
pydantic = "^2.4.2"
alembic = "^1.12.1"
python-dotenv = "^1.0.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
pymysql = "^1.1.0"
orjson = "^3.9.10"
psycopg = "^3.1.12"
sqlalchemy = "^2.0.23"
prometheus-fastapi-instrumentator = "^6.1.0"
gunicorn = "^21.2.0"
pydantic-settings = "^2.0.3"
pyinstrument = "^4.6.0"
picologging = "^0.9.2"
uvloop = "^0.17.0"
aiohttp = "^3.8.6"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.4"
mypy = "^1.6.1"
types-redis = "^4.6.0.9"
ruff = "^0.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".pytest_cache"]
ignore-init-module-imports = true

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.per-file-ignores]
"main.py" = ["E402"]
"shell.py" = ["F401"]
