[tool.poetry]
name = "fastapi-base"
version = "0.1.0"
description = ""
authors = ["Abe M <abe.malla8@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
redis = "^5.0.2"
boto3 = "^1.34.57"
uvicorn = "^0.23.2"
pydantic = "^2.6.3"
alembic = "^1.13.1"
python-dotenv = "^1.0.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
pymysql = "^1.1.0"
orjson = "^3.9.15"
psycopg = "^3.1.18"
sqlalchemy = "^2.0.28"
prometheus-fastapi-instrumentator = "^6.1.0"
gunicorn = "^21.2.0"
pydantic-settings = "^2.2.1"
pyinstrument = "^4.6.2"
picologging = "^0.9.3"
uvloop = "^0.19.0"
aiohttp = "^3.9.3"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.4"
mypy = "^1.8.0"
types-redis = "^4.6.0.20240218"
ruff = "^0.1.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".pytest_cache"]
ignore-init-module-imports = true

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.per-file-ignores]
"main.py" = ["E402"]
"shell.py" = ["F401"]
