[project]
name = "fastapi-base"
version = "0.1.0"
description = ""
authors = [{ name = "Abe M", email = "abe.malla8@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".pytest_cache"]
ignore-init-module-imports = true

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.per-file-ignores]
"main.py" = ["E402"]
"shell.py" = ["F401"]
